# poliman

./: .gitignore  .gitmodules  README.md  meson.build
include/: button.h  defines.h  entity.h  font_renderer.h  ghost.h  ghost_type.h  pacman_game.h  player.h  quiz.h
levels/: 1  2  3
src/: button.cpp  entity.cpp  font_renderer.cpp  ghost.cpp  main.cpp  pacman_game.cpp  player.cpp  quiz.cpp  sdl_uclibc_stub.c  ui.cpp
